--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,11 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
     testImplementation 'junit:junit:4.13'
 }
+
+task CustomTaskPR16Module18Adrian () {
+
+    description ("Run Tambahan Custom Task")
+    doLast {
+        println "Ini adalah tambahan custom task !"
+    }
+}
